// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProviderManager enhancements > should detect instagram urls and render fallback link 1`] = `
<div
  className="w-full p-4 bg-card rounded-lg text-center"
>
  <p
    className="mb-2"
  >
    Vidéo hébergée sur Instagram.
  </p>
  <a
    className="text-blue-600 underline"
    href="https://www.instagram.com/tv/ABCDE12345/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Ouvrir sur Instagram
  </a>
</div>
`;

exports[`ProviderManager enhancements > should detect tiktok urls and render fallback link 1`] = `
<div
  className="w-full p-4 bg-card rounded-lg text-center"
>
  <p
    className="mb-2"
  >
    Vidéo hébergée sur TikTok.
  </p>
  <a
    className="text-black underline"
    href="https://www.tiktok.com/@user/video/9876543210"
    rel="noopener noreferrer"
    target="_blank"
  >
    Ouvrir sur TikTok
  </a>
</div>
`;

exports[`ProviderManager enhancements > should render a facebook iframe element when asked 1`] = `
<div
  className="w-full bg-black rounded-lg overflow-hidden provider-facebook "
>
  <div
    className="aspect-video w-full"
  >
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen; web-share"
      allowFullScreen={true}
      className="w-full h-full"
      frameBorder="0"
      height="100%"
      src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FNotrePage%2Fvideos%2F123456789%2F&width=560&show_text=false&appId"
      title="Facebook Live Player"
      width="100%"
    />
  </div>
</div>
`;
